@@ -5,4 +5,5 @@
 PLAIN_JAVA=/usr/RTC606Dev/Installs/PlainJavaAPI
 export PLAIN_JAVA
 
+# In the -Djava.ext.dirs always keep the Java distribution in the front
 $JAVA_HOME/bin/java -Djava.ext.dirs=$JAVA_HOME/lib/ext:$JAVA_HOME/jre/lib/ext:$PLAIN_JAVA -cp ./scmtools_lib:$PLAIN_JAVA%:./lib: -jar scmtools.jar "$@"
